2010-12-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: enhancement: mkvextract will exit with an error if
	the user specifies track IDs that do not exist in the source
	file. This works in the "tracks" and "timecodes_v2" extraction
	modes. Fix for bug 583.

	* docs: mkvextract's man page has been updated to match the
	program's expected command line syntax for the "timecodes_v2"
	mode. Fix for bug 583.

2010-12-20  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Fixed building the Qt version of mkvinfo's
	GUI. Fix for bug 576.

	* mkvmerge, mmg: bug fix: Option files could not contain options
	that started with '#' as they were interpreted as comment lines.

2010-11-15  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: The "default duration" header field is
	set for DTS audio tracks.

2010-11-09  Moritz Bunkus  <moritz@bunkus.org>

	* build system: mmg's guide and its images are installed into the
	location given by configure's "docdir" variable. Patch by Cristian
	Morales Vega (see AUTHORS).

2010-11-07  Moritz Bunkus  <moritz@bunkus.org>

	* all: Made the French translation selectable in all programs.

2010-11-01  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: On Mac OS X the application type is set to a
	foreground application preventing issues like the GUI never
	getting focus.

2010-10-31  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.4.0.

	* build system: bug fix: Installation no longer fails if xsltproc
	is available but the DocBook stylesheets aren't. Fix for bug 575.

	* mkvmerge: new feature: If the name of an input file starts with
	'=' then mkvmerge will not try to open other files with the same
	name (e.g. 'VTS_01_1.VOB', 'VTS_01_2.VOB', 'VTS_01_3.VOB') from
	the same directory. A single '=' as an argument disables this as
	well for the next input file. Implements bug 570.

	* mmg: new feature: Added an option to disable extra compression
	when adding tracks by default.
